k8s/app_python/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-python
  template:
    metadata:
      labels:
        app: app-python
        lang: python
    spec:
      containers:
      - name: app-python
        image: y4cerr/app_python:latest
        ports:
        - containerPort: 8080
