k8s/app_python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-python
  labels:
    app: app-python
spec:
  type: LoadBalancer
  selector:
    app: app-python
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
