k8s/app_python/service.yml
apiVersion: v1
kind: Service
metadata:
  name: moscow-time-app-service
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: moscow-time-app-deployment
