k8s/app_python/services.yml
apiVersion: v1
kind: Service
metadata:
  name: moscow-tz-service
spec:
  selector:
    app: moscow-tz
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: LoadBalancer
