k8s/app_python/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moscow-tz-ingress
  annotations:
    # Use nginx as ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: moscow-tz.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moscow-tz-service
                port:
                  number: 5001
